--- a/Design/styles.css
+++ b/Design/styles.css
@@ -122,3 +122,15 @@
     color: #ffffff;
   }
   
+  .download-button {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #ffffff;
+    background-color: #007bff;
+    border-radius: 5px;
+    text-decoration: none;
+    text-transform: uppercase;
+}
+.download-button:hover {
+    background-color: #0056b3;
+}
