--- a/Design/styles.css
+++ b/Design/styles.css
@@ -41,11 +41,11 @@
   
   nav ul li a:hover,
   nav ul li a:focus {
-    color: #cf1767;
+    color: #1717cf;
   }
   
   nav ul li a.active {
-    color: #cf1767;
+    color: #119e61;
     border-bottom: 1px solid white;
   }
   
@@ -64,7 +64,7 @@
   
   /* Projects and Blog Posts */
   .project, .blog-post {
-    background-color: #f9f9f9;
+    background-color: #1a0947;
     border: 1px solid #f4f4f4;
     padding: 20px;
     margin-bottom: 20px;
@@ -122,9 +122,12 @@
     background-color: #cf1767;
     color: #ffffff;
   }
-  
+  /*Flex to Center "Download CV Button" */
+  .center{
+    display: flex;
+    justify-content: center;
+  }
   .download-button {
-    display: inline-block;
     padding: 10px 20px;
     color: #ffffff;
     background-color: #007bff;
