Centered Portait on Main html,Doubled the Pixels

--- a/Design/styles.css
+++ b/Design/styles.css
@@ -140,6 +140,11 @@
 }
 .protraitimg {
   border-radius: 50%;
-  width: 150px;
-  height: 150px; 
+  width: 300px;
+  height: 300px; 
+}
+.imgcontainer{
+ display: flex;
+ justify-content: center;
+ height: 100vh; 
 }
