--- a/Design/styles.css
+++ b/Design/styles.css
@@ -165,5 +165,8 @@ footer {
 .imgcontainer{
  display: flex;
  justify-content: center;
- height: 100vh; 
+ height: 70vh; 
+}
+#about-me-text {
+  font-size: 20px; 
 }
