--- a/Design/styles.css
+++ b/Design/styles.css
@@ -169,5 +169,29 @@ footer {
 }
 #about-me-text {
   font-size: 20px;
-  margin-bottom: 50px; 
+  margin-bottom: 300px; 
+}
+#skills {
+  margin-bottom: 500px; 
+}
+/* Skill Buttons*/
+.skills-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.skills-container a {
+  color: #beacac;
+  text-decoration: none;
+  margin: 0.5rem;
+  transition: color 0.3s ease;
+}
+
+.skills-container a:hover {
+  color: #007BFF;
+}
+
+.skills-container i {
+  margin-right: 0.5rem;
 }
